# Juniper-v2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  GameMain.cpp
cmake/: add_shader.cmake
juniper/: CMakeLists.txt  EntryPoint.cpp  JuniperMain.cpp
juniper/dependencies/vulkansdk/macOS/lib/: libSPIRV-Tools-shared.dylib  libspirv-cross-c-shared.0.36.0.dylib  libspirv-cross-c-shared.0.dylib
juniper/include/: Game.h
juniper/src/: CMakeLists.txt  Game.cpp
juniper/src/shaders/: shader.vert
scripts/: CompileShaders.sh  EnvironmentVariables.sh  JuniperSetup.sh
