#======================================================================
# Juniper/juniper
#======================================================================
set(J_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/juniper/include")
set(J_SRC_DIR "${PROJECT_SOURCE_DIR}/juniper/src")

add_subdirectory(${J_SRC_DIR})